# az-ai-catalyst

./: .gitignore  README.md  env.example  env.sample  pyproject.toml
az_ai/: __init__.py
az_ai/catalyst/: __init__.py  app.py  azure_repository.py  catalyst.py  repository.py  runner.py  schema.py  settings.py
az_ai/catalyst/helpers/: azure_openai.py  content_understanding_client.py  documentation.py  markdown.py  rich.py
az_ai/docs/: SETTINGS.md
az_ai/ingestion/: __init__.py  app.py  ingestion.py  repository.py  runner.py  schema.py  settings.py
az_ai/ingestion/helpers/: azure_openai.py  documentation.py  markdown.py
az_ai/ingestion/tools/: images.py  markdown.py  rich.py
examples/: argus.md  argus.py  demo.ipynb  doc.md  doc.py  its_a_rag.md  its_a_rag.py  itsarag.md  itsarag.py  preview.md  preview.py
src/az_ai_ingestion/: __init__.py
tests/: test_catalyst_declaration.py  test_catalyst_decorator.py  test_catalyst_processing.py  test_catalyst_semantic_kernel.py  test_documents.py  test_embedding.py  test_fragment_index.py  test_fragment_selector.py  test_fragments.py  test_image_fragment.py  test_ingestion.py  test_ingestion_declaration.py  test_ingestion_decorator.py  test_ingestion_processing.py  test_repository.py  test_repository_azure.py
tests/data/: README.md
