[project]
name = "az-ai-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominique Broeglin", email = "dominique.broeglin@microsoft.com" }
]
requires-python = ">=3.12"

dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-projects>=1.0.0b10",
    "azure-identity>=1.21.0",
    "azure-search-documents>=11.5.2",
    "openai>=1.76.0",
    "pedantic>=2.1.9",
    "pillow>=11.2.1", 
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["az_ai"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--tb=short",
    "--disable-warnings",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
